# dorea-workspace

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  TASK.md  corvia.toml  dorea.toml
.agents/skills/: ai-assisted-development.md  content-verification.md  superpowers  visual-content-playwright.md
.claude/: settings.json
.claude/commands/: dev-loop.md
.claude/hooks/: agent-check.sh  corvia-write-reminder.sh
.corvia/: .gitignore
.corvia/hooks/: doc-placement-check.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: cleanup-orphans.sh  init-host.sh  lib.sh  post-create.sh  post-start.sh
.github/workflows/: release.yml
docs/: underwater_pipeline_architecture.docx
docs/benchmarks/: embedding-backend-benchmark.md
docs/decisions/: 2026-03-03-optional-devcontainer-services-design.md  2026-03-03-optional-devcontainer-services.md  2026-03-03-prebuilt-binaries-design.md  2026-03-03-prebuilt-binaries.md  2026-03-13-docs-workflow-design.md  2026-04-01-first-lut-generation-design.md  2026-04-02-10bit-pipeline-design.md  2026-04-02-cpu-parallelization-rayon.md  2026-04-02-grading-pipeline-perf-v3.md  2026-04-02-maxine-post-grading-enhancement.md  2026-04-03-3d-lut-temporal-interpolation.md  (+29 more)
tools/corvia-dev/: pyproject.toml
tools/corvia-dev/corvia_dev/: __init__.py  cli.py  config.py  health.py  manager.py  models.py  rebuild.py  services.py  traces.py
tools/corvia-dev/tests/: test_config.py  test_health.py  test_manager.py  test_models.py  test_rebuild.py  test_services.py  test_traces.py
(+10822 files in other folders)
